fixed alot of whitespace errors

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,6 @@ $darker-grey: #424242;
 }
 .background-tint {
   background-color: $light-blue !important; // Tint color
-
   background-blend-mode: multiply;
 }
 /* main-nav-bar */
@@ -34,21 +33,15 @@ $darker-grey: #424242;
   background-color: $light-grey !important;
 }
 .jumbotron {
-
   color: white;
-
+  background-color: $light-blue;
 
   &.home-page {
     text-align: center;
-    background: image-url('friends.jpg');
-    background-position: 50% 50%;
-    background-size: cover;
   }
   &.about-us {
 
-    // background-image: image-url('handwriting.jpeg');
-    background-position: 50% 50%;
-    background-size: cover;
+
     & .headline {
       padding-left: 0;
     }
@@ -166,5 +159,5 @@ footer.site-footer{
 }
 .stats {
   color: white;
-  
+
 }
