--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,11 +15,9 @@
 
 }
 .sub-heading {
-  width: 70%;
+  text-align: center;
   margin: 0 auto 40px auto;
   font-size: 140%;
-
-
   color: $darker-grey;
 }
 .half-rule {
@@ -31,16 +29,16 @@
   color: $darker-grey;
   }
   img {
-    width: 300px;
-    height: 113px;
+    width: 150px;
+    height: 75px;
   }
 }
 .carousel {
   padding: 0;
   float: left;
   img {
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
   }
 }
 
